--- a/src/main/resources/templates/main/profile.html
+++ b/src/main/resources/templates/main/profile.html
@@ -71,7 +71,7 @@
             </ul>
           </div>
         </li>
-        <span>
+        <span id="side-attend">
           <button class="btn d-inline-flex align-items-left rounded border-0 collapsed">
           나의 출석
           </button>
@@ -117,6 +117,7 @@
                     </div>
                   </div>
                 </div>
+                <button id="logout">로그아웃</button>
                 <button class="btn-edit" data-bs-toggle="modal" data-bs-target="#staticBackdrop">수정</button>
                 <!-- Modal -->
                 <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -133,44 +134,8 @@
               </div>
 
               <br>
-              <p>계정 정보</p>
+              <h2 id="title3">나의 출석</h2>
 
-              <div id="account-info">
-                <div class="account-info-detail">
-                  <p id="title3">계정 연동</p>
-                  <div class="row">
-                    <div class="col">
-                      <img th:attr="src=@{/img/googleLogo.png}" src="../img/googleLogo.png" alt="mdo" width="60" height="60">
-                      <span style="color: black; font-weight: 300">Google</span>
-                    </div>
-                    <div class="col" style="text-align: right">
-                      <button class="btn-account">연동하기</button>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col">
-                      <p>이메일</p>
-                    </div>
-                    <div class="col" style="text-align: right">
-                      <p style="font-weight: 300">gildong@gmail.com</p>
-                    </div>
-                  </div>
-                  <hr>
-                  <p>비밀번호</p>
-                  <div class="row">
-                    <div class="col">
-                      <p style="font-weight: 300">최근 업데이트: 2024-02-01</p>
-                    </div>
-                    <div class="col" style="text-align: right">
-                      <button id="btn-change-password">비밀번호 변경하기</button>
-                    </div>
-                  </div>
-                  <hr>
-                  <p style="text-align: right; color: #0d6efd">로그아웃</p>
-                  <p style="text-align: right; color: red">계정 탈퇴</p>
-                </div>
-              </div>
             </main>
           </section>
         </div>
@@ -191,7 +156,7 @@
   });
 
   $(document).ready(function() {
-    $('#side-account-info').click(function () {
+    $('#side-attend').click(function () {
       var offset = $('#title3').offset();
       $('html').animate({scrollTop: offset.top}, 50);
     });
