--- a/src/main/resources/templates/main/profile.html
+++ b/src/main/resources/templates/main/profile.html
@@ -9,11 +9,14 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+  <!--  calendar 화살표 로고-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
   <link href="../assets/dist/css/bootstrap.min.css/bootstrap.bundle.js" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@300;500&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="../../static/js/Untitled.js" defer></script>
 </head>
 <body class="fade">
   <div class="all">
@@ -135,7 +138,47 @@
 
               <br>
               <h2 id="title3">나의 출석</h2>
-
+              <div class="wrapper">
+                <header>
+                  <p class="current-date"></p>
+                  <div class="icons">
+                    <span id="prev" class="material-symbols-rounded">chevron_left</span>
+                    <span id="next" class="material-symbols-rounded">chevron_right</span>
+                  </div>
+                </header>
+                <div class="calendar">
+                  <ul class="weeks">
+                    <li>Sun</li>
+                    <li>Mon</li>
+                    <li>Tue</li>
+                    <li>Wed</li>
+                    <li>Thu</li>
+                    <li>Fri</li>
+                    <li>Sat</li>
+                  </ul>
+                  <ul class="days" data-bs-toggle="modal" data-bs-target="#alertCheck"></ul>
+                </div>
+              </div>
+              <div class="modal fade" id="alertCheckZero" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-body" style="font-weight: 300; height: 80px">
+                      출석 체크 완료
+                      <button class="btn-yes" data-bs-dismiss="modal">닫기</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="modal fade" id="alertCheckOne" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-body" style="font-weight: 300; height: 80px">
+                      출석체크는 당일만 가능합니다
+                      <button class="btn-yes" data-bs-dismiss="modal">닫기</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </main>
           </section>
         </div>
@@ -179,6 +222,26 @@
       height: newHeight
     }, 300);
   });
+
+  // function handleDateClick(day) {
+  //   let currYear = new Date().getFullYear();
+  //   let currMonth = new Date().getMonth();
+  //   let check;
+  //
+  //   if (new Date(currYear, currMonth, day) < new Date().setHours(0, 0, 0, 0)) {
+  //     check = 1;
+  //   } else if (new Date(currYear, currMonth, day) > new Date().setHours(0, 0, 0, 0)) {
+  //     check = 1;
+  //   } else {
+  //     check = 0;
+  //   }
+  //
+  //   if (check === 0) {
+  //     $('.days').attr('data-bs-target','#alertCheckZero');
+  //   } else {
+  //     $('.days').attr('data-bs-target','#alertCheckOne');
+  //   }
+  // }
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
