feat: 각 minigame 학습 챕터 이동

--- a/src/main/resources/templates/main/baseball.html
+++ b/src/main/resources/templates/main/baseball.html
@@ -72,7 +72,7 @@
             </svg>
             <table style="width: 100px;">
               <tr>
-                <td><a>챕터 1</a></td>
+                <td><a th:onclick="|location.href ='/main/learn/1'|">챕터 1</a></td>
               </tr>
             </table>
           </div>
