--- a/src/main/resources/templates/main/hangman.html
+++ b/src/main/resources/templates/main/hangman.html
@@ -72,8 +72,8 @@
             </svg>
             <table style="width: 150px;">
               <tr>
-                <td><a>챕터 1</a></td>
-                <td><a>챕터 2</a></td>
+                <td><a th:onclick="|location.href ='/main/learn/1'|">챕터 1</a></td>
+                <td><a th:onclick="|location.href ='/main/learn/2'|">챕터 2</a></td>
               </tr>
             </table>
           </div>
