--- a/src/main/resources/templates/main/levelUp.html
+++ b/src/main/resources/templates/main/levelUp.html
@@ -72,7 +72,7 @@
             </svg>
             <table style="width: 100px;">
               <tr>
-                <td><a>챕터 3</a></td>
+                <td><a th:onclick="|location.href ='/main/learn/3'|">챕터 3</a></td>
               </tr>
             </table>
           </div>
