--- a/src/main/resources/templates/main/inventory.html
+++ b/src/main/resources/templates/main/inventory.html
@@ -30,7 +30,7 @@
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <div id="logo">
                         <a th:onclick="|location.href='@{/}'|" onclick="location.href='ww_main.html'"><svg xmlns="http://www.w3.org/2000/svg" width="45" height="45"
-                                                                                                               fill="currentColor" class="bi bi-file-word-fill" viewBox="0 0 16 16">
+                                                                                                           fill="currentColor" class="bi bi-file-word-fill" viewBox="0 0 16 16">
                             <path
                                     d="M12 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zM5.485 4.879l1.036 4.144.997-3.655a.5.5 0 0 1 .964 0l.997 3.655 1.036-4.144a.5.5 0 0 1 .97.242l-1.5 6a.5.5 0 0 1-.967.01L8 7.402l-1.018 3.73a.5.5 0 0 1-.967-.01l-1.5-6a.5.5 0 1 1 .97-.242z" />
                         </svg></a>
@@ -119,13 +119,13 @@
                         <label for="radioBookmark">북마크</label>
                     </div>
 
-                    <div class="radio-block">
+                    <div class="radio-block col-sm-12 col-lg-12 mb-12 mb-sm-12">
                         <div class="radio-contents"><!--무시--></div>
                         <!--몰라요-->
                         <div class="radio-contents">
                             <div class="row">
                                 <div class="col-sm-6 col-lg-4 mb-3 mb-sm-3" th:each="learn:${learns}" th:if="${!learn.learn}">
-                                    <div class="card" style="width: 300px; height: 220px">
+                                    <div class="card col-sm-12 col-lg-12 mb-12 mb-sm-12" style="height: 230px;">
                                         <div class="card-body">
                                             <h5 class="card-title" th:text="${learn.word.word}">Card title</h5>
                                             <h6 class="card-subtitle mb-2 text-body-secondary" th:text="${learn.word.chapter.number}">Chapter 1</h6>
@@ -144,7 +144,7 @@
                         <div class="radio-contents">
                             <div class="row">
                                 <div class="col-sm-6 col-lg-4 mb-3 mb-sm-3" th:each="learn:${learns}" th:if="${learn.learn}">
-                                    <div class="card" style="width: 300px; height: 220px">
+                                    <div class="card col-sm-12 col-lg-12 mb-12 mb-sm-12" style="height: 230px;">
                                         <div class="card-body">
                                             <h5 class="card-title" th:text="${learn.word.word}">Card title</h5>
                                             <h6 class="card-subtitle mb-2 text-body-secondary" th:text="${learn.word.chapter.number}">Chapter 1</h6>
@@ -160,7 +160,7 @@
                         <div class="radio-contents">
                             <div class="row">
                                 <div class="col-sm-6 col-lg-4 mb-3 mb-sm-3" th:each="learn:${learns}" th:if="${learn.learn}">
-                                    <div th:if="${learn.learn}" class="card" style="width: 300px; height: 220px;">
+                                    <div th:if="${learn.learn}" class="card col-sm-12 col-lg-12 mb-12 mb-sm-12" style="height: 230px;">
                                         <div class="card-body">
                                             <h5 class="card-title" th:text="${learn.word.word}">Card title</h5>
                                             <h6 class="card-subtitle mb-2 text-body-secondary" th:text="${learn.word.chapter.number}">Chapter 1</h6>
@@ -172,7 +172,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -180,51 +179,52 @@
             </div>
         </main>
     </div>
-    <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            setTimeout(function () {
-                document.body.className = '';
-            });
+</div>
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        setTimeout(function () {
+            document.body.className = '';
         });
+    });
 
-    </script>
-    <script>
-        // var i = 0;
-        // $('.bi-bookmark-star').on('click',function(){
-        //     if(i==0){
-        //         $(this).removeClass('bi-bookmark-star');
-        //         $(this).addClass('bi-bookmark-star-fill');
-        //         i++;
-        //     }else if(i==1){
-        //         $(this).removeClass('bi-bookmark-star-fill');
-        //         $(this).addClass('bi-bookmark-star');
-        //         i--;
-        //     }
-        //
-        // });
+</script>
+<script>
+    // var i = 0;
+    // $('.bi-bookmark-star').on('click',function(){
+    //     if(i==0){
+    //         $(this).removeClass('bi-bookmark-star');
+    //         $(this).addClass('bi-bookmark-star-fill');
+    //         i++;
+    //     }else if(i==1){
+    //         $(this).removeClass('bi-bookmark-star-fill');
+    //         $(this).addClass('bi-bookmark-star');
+    //         i--;
+    //     }
+    //
+    // });
 
-        var i = 0;
-        $('.bi-bookmark-star').on('click',function () {
-            if(i==0){
-                $(this).attr('class','bi-bookmark-star-fill');
-                i++;
-            }
-            else if(i==1){
-                $(this).attr('class','bi-bookmark-star');
-                i--;
-            }
-        });
+    var i = 0;
+    $('.bi-bookmark-star').on('click',function () {
+        if(i==0){
+            $(this).attr('class','bi-bookmark-star-fill');
+            i++;
+        }
+        else if(i==1){
+            $(this).attr('class','bi-bookmark-star');
+            i--;
+        }
+    });
 
-        const logoBtn = document.querySelector("#logo a");
-        const inventoryBtn = document.querySelector("#inventoryButton");
-        const overviewBtn = document.querySelector("#overviewButton");
-        logoBtn.addEventListener("click", () => {location.href = "/"});
+    const logoBtn = document.querySelector("#logo a");
+    const inventoryBtn = document.querySelector("#inventoryButton");
+    const overviewBtn = document.querySelector("#overviewButton");
+    logoBtn.addEventListener("click", () => {location.href = "/"});
 
-        inventoryBtn.addEventListener("click", () => {location.href ="/main/inventory"});
-        overviewBtn.addEventListener("click", () => {location.href ="/"});
+    inventoryBtn.addEventListener("click", () => {location.href ="/main/inventory"});
+    overviewBtn.addEventListener("click", () => {location.href ="/"});
 
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </div>
 </body>
 </html>
